# NuakeUIDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/: panel.frag.glsl  text.frag.glsl  text.vert.glsl
resources/UI/: btn-container.css  btn-container.html  demo.css  demo.html  menu-bar.css  menu-bar.html  test.css  test.xml
resources/UI/tabs/: tab1.html  tab2.html  tab3.html
src/: CMakeLists.txt  MyInputManager.cpp  MyInputManager.h  Resource.h  SliderNode.h  TextInput.h  main.cpp
src/resources/: panel.frag.glsl  text.vert.glsl
src/resources/UI/: demo.html
